    * Pass a copy of an event instead of passing the event arguments to the
    event handlers. This will break backwards compatability.
    * Allow changing ownership of torrents.
    * File modifications on the auth file are now detected and when they happen,
    the file is reloaded. Upon finding an old auth file with an old format, an
    upgrade to the new format is made, file saved, and reloaded.
    * Authentication no longer requires a username/password. If one or both of
    these is missing, an authentication error will be sent to the client
    which sould then ask the username/password to the user.
    * Implemented sequential downloads.
    * #378: Provide information about a torrent's pieces states

==== GtkUI ====
    * Fix uncaught exception when closing deluge in classic mode
    * Allow changing ownership of torrents
    * Host entries in the Connection Manager UI are now editable. They're
    now also migrated from the old format were automatic localhost logins were
    possible, which no longer is, this fixes #1814.
    * Implemented sequential downloads UI handling.
    * #378: Allow showing a pieces bar instead of a regular progress bar in a
    torrent's status tab.
    * #2093: Make torrent opening compatible with all unicode paths.
    * #1084: Fix magnet association button on Windows

==== WebUI ====
    * Server (deluge-web) now daemonizes by default, use -d or --do-not-daemonize to disable.
    * Fixed the --base option to work for normal use, not just with reverse proxies.

==== Blocklist Plugin ====
    * #1382: Implemented whitelist support to both core and GTK UI.
    * Implemented ip filter cleaning before each update. Restarting the deluge
    daemon is no longer needed.
    * If "check_after_days" is 0(zero), the timer is not started anymore. It
    would keep updating one call after the other. If the value changed, the
    timer is now stopped and restarted using the new value.